package com.cpz.processingtemplate.interfaces;

/**
 * @author CPZ
 */
public interface Input {
}
