package com.cpz.processingtemplate.util;

/**
 * Mouse buttons normalized for ViewModel consumption.
 */
public enum MouseButton {
    LEFT,
    CENTER,
    RIGHT,
    OTHER
}
