package com.cpz.processingtemplate.view.dto;

import com.cpz.processingtemplate.interfaces.Parametros;

/**
 * @author CPZ
 */
public record ParametrosRectangulo(float x, float y, float w, float h, int c) implements Parametros {

}
